[workspace]
members = ["parsers/", "compiler/", "templates/", "interp"]

[workspace.dependencies.paralegal-policy]
git = "https://github.com/brownsys/paralegal"
rev = "c52fc5ccb2b9a14d307381b5567eb154b86667a9"

[workspace.dependencies.paralegal]
git = "https://github.com/brownsys/paralegal"
rev = "c52fc5ccb2b9a14d307381b5567eb154b86667a9"
