[workspace]
members = ["crates/*"]
exclude = [
    "props",
    "crates/plugin/tests",
    "crates/policy/tests",
    "crates/compiler/tests",
    "crates/paralegal-explore",
]
resolver = "2"

[workspace.dependencies]
serde = "1.0.216"
petgraph = { version = "0.6", features = ["serde-1"] }
strum = { version = "0.25", features = ["derive"] }
anyhow = { version = "1.0.72", features = ["backtrace"] }
allocative = "0.3.4"
internment = { version = "0.8.6" }
serde_json = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "local-time",
    "chrono",
    "env-filter",
] }
clap = { version = "4.5.23", features = ["derive", "cargo", "env"] }
num-derive = "0.4"
num-traits = "0.2"

[profile.release]
debug = true
