[package]
name = "paralegal-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.5.0"
parsers = { path = "../parsers" }
templates = { path = "../templates" }
clap = { version = "3", features = ["derive"] }
nom = "7.1.3"

[dependencies.paralegal-policy]
git = "https://github.com/brownsys/paralegal"
rev = "c52fc5ccb2b9a14d307381b5567eb154b86667a9"

[dependencies.paralegal]
git = "https://github.com/brownsys/paralegal"
rev = "c52fc5ccb2b9a14d307381b5567eb154b86667a9"
