[package]
name = "paralegal-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = { workspace = true }
parsers = { path = "../parsers" }
clap = { workspace = true }
common = { path = "../common" }
nom = { workspace = true }
optimizer = { path = "../optimizer" }

[dependencies.paralegal-policy]
git = "https://github.com/brownsys/paralegal"
rev = "c52fc5ccb2b9a14d307381b5567eb154b86667a9"

[dependencies.paralegal]
git = "https://github.com/brownsys/paralegal"
rev = "c52fc5ccb2b9a14d307381b5567eb154b86667a9"
