[package]
name = "paralegal-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = { workspace = true }
parsers = { path = "../parsers" }
clap = { workspace = true }
common = { path = "../common" }
nom = { workspace = true }
optimizer = { path = "../optimizer" }
