[package]
name = "templates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = { version = "4.5.0", features = ["rust-embed"] }
serde = "1.0.192"
strum = "0.26"
strum_macros = "0.26"
rust-embed = "8"
