[package]
name = "cargo-paralegal-flow"
version = "0.0.1"
edition = "2021"
publish = false
description = "Extractor for precise semantic PDGs from rust code."

[dependencies]
cargo_metadata = "0.14.0"
anyhow.workspace = true
paralegal-non-rustc-utils.path = "../paralegal-non-rustc-utils"
tracing.workspace = true
