[package]
name = "cargo-paralegal-flow"
version = "0.0.1"
edition = "2021"
publish = false
description = "Extractor for precise semantic PDGs from rust code."

[dependencies]
cargo_metadata = "0.14.0"
anyhow.workspace = true
paralegal-utils.path = "../utils"
tracing.workspace = true
lazy_static = "1"
clap.workspace = true
serde.workspace = true
num-derive.workspace = true
num-traits.workspace = true
serde_json.workspace = true
