[package]
name = "dfcheck"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dfgraph = { path = "../dfgraph" }
anyhow = "1.0.72"
log = "0.4"
itertools = "0.11.0"
indexical = "0.2.1"
serde_json = "1"
simple_logger = "2"

[dev-dependencies]
dfpp = { path = "../dfpp", features = ["test"] }