[package]
name = "dfgraph"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
rustc = []

[dependencies]
serde = { version = "1", features = ["derive"] }
log = "0.4"
internment = { version = "0.7.1", features = ["serde"] }
indexical = "0.1.1"
serde_json = "*"