[package]
name = "dfgraph"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
rustc = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
log = "0.4"
internment = { version = "0.7.1", features = ["serde"] }
indexical = { workspace = true }
itertools = "0.11.0"
