[package]
name = "dfpp-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfpp = { path = "../dfpp" }
petgraph = "0.6"
clap = { version = "=4.3.24", features = ["derive", "cargo", "env"] }
indicatif = "0.17"
serde-lexpr = "0.1"
dialoguer = { version = "0.10", features = ["history", "fuzzy-select"] }
ringbuffer = "0.13"