[package]
name = "flowistry_pdg"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
rustc = []

[dependencies]
cfg-if = "1.0.0"
internment = { workspace = true, features = ["serde"] }

strum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
allocative = { workspace = true }
