[package]
name = "paralegal-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
handlebars = { version = "6.3.2", features = ["rust-embed"] }
nom = "7.1.3"
rust-embed = "8.7.0"
nom-supreme = "0.8.0"
strum = "0.27.1"
strum_macros = "0.27.1"
