[package]
name = "paralegal-flow"
version = "0.0.1"
edition = "2021"
publish = false
description = "Extractor for precise semantic PDGs from rust code."

[package.metadata.rust-analyzer]
rustc_private = true

[features]
test = []

[dependencies]
paralegal-spdg = { path = "../paralegal-spdg", features = ["rustc"] }

#flowistry = { path = "../../../flowistry/crates/flowistry" }
flowistry = { git = "https://github.com/brownsys/flowistry", rev = "1b94b4180b4d9b5d20e60675c683a781b853d63f" }
#flowistry = { git = "https://github.com/willcrichton/flowistry", rev = "3b0a12668894220010d715092bb6e9fb2cefb5ba" }

rustc_plugin = "=0.7.4-nightly-2023-08-25"
rustc_utils = { version = "=0.7.4-nightly-2023-08-25", features = [
    "indexical",
] }
indexical = { version = "0.3.1", default-features = false, features = [
    "rustc",
] }


clap = { version = "=4.3.24", features = ["derive", "cargo", "env"] }
serde = { workspace = true, features = ["derive"] }
lazy_static = "1"
ordermap = "0.3"
trait_enum = "0.5"
pretty = "0.11"
nom = "7"
log = { version = "0.4", features = ["serde"] }
simple_logger = "2"
num-derive = "0.4"
num-traits = "0.2"
petgraph = { workspace = true }
humantime = "2"
strum = { workspace = true }


#dot = "0.1"
dot = { git = "https://github.com/JustusAdam/dot-rust", rev = "ff2b42ceda98c639c8ea3cbfc56b83d6e06e8106" }
#dot = {path = "../../clones/dot-rust" }

serde_bare = "0.5.0"
serde_json = "1"
toml = "0.7"


# This is just for pinning this dependency
camino = "= 1.0.9"
serial_test = "2.0.0"
itertools = "0.12"
anyhow = "1.0.72"
thiserror = "1"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
paralegal-flow = { path = ".", features = ["test"] }

[[bin]]
name = "cargo-paralegal-flow"

[[bin]]
name = "paralegal-flow"
