[package]
name = "paralegal-flow"
version = "0.0.1"
edition = "2021"
publish = false
description = "Extractor for precise semantic PDGs from rust code."

[package.metadata.rust-analyzer]
rustc_private = true

[features]
test = ["rustc_utils/test"]

[dependencies]
paralegal-spdg = { path = "../paralegal-spdg", features = ["rustc"] }

flowistry_pdg_construction = { path = "../flowistry_pdg_construction" }
flowistry_pdg = { path = "../flowistry_pdg" }
flowistry = { workspace = true }

rustc_utils = { workspace = true }
rustc_plugin = { workspace = true }
indexical = { version = "0.3.1", default-features = false, features = [
    "rustc",
] }


clap = { version = "=4.3.24", features = ["derive", "cargo", "env"] }
serde = { workspace = true, features = ["derive"] }
lazy_static = "1"
ordermap = "0.3"
trait_enum = "0.5"
pretty = "0.11"
nom = "7"
log = { version = "0.4", features = ["serde"] }
simple_logger = "2"
num-derive = "0.4"
num-traits = "0.2"
petgraph = { workspace = true }
humantime = "2"
strum = { workspace = true }
enum-map = "2.7"
serial_test = "2.0.0"
itertools = "0.12"
anyhow = "1.0.72"
thiserror = { workspace = true }
serde_bare = "0.5.0"
toml = "0.7"

#dot = "0.1"
dot = { git = "https://github.com/JustusAdam/dot-rust", rev = "ff2b42ceda98c639c8ea3cbfc56b83d6e06e8106" }
#dot = {path = "../../clones/dot-rust" }

# This is just for pinning this dependency
camino = "= 1.0.9"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
paralegal-flow = { path = ".", features = ["test"] }

[[bin]]
name = "cargo-paralegal-flow"

[[bin]]
name = "paralegal-flow"
