[package]
name = "paralegal-policy"
version = "0.1.0"
edition = "2021"
publish = false
description = "A framework for writing policies over graphs defined in `paralegal-spdg` and extracted from Rust programs with `paralegal-flow`."

[dependencies]
paralegal-spdg = { path = "../paralegal-spdg" }
anyhow = { version = "1.0.72", features = ["backtrace"] }
log = "0.4"
itertools = "0.11.0"
indexical = { workspace = true }
serde_json = "1"
simple_logger = "2"

[dev-dependencies]
paralegal-flow = { path = "../paralegal-flow", features = ["test"] }