[package]
name = "paralegal-policy"
version = "0.1.0"
edition = "2021"
publish = false
description = "A framework for writing policies over graphs defined in `paralegal-spdg` and extracted from Rust programs with `paralegal-flow`."

[dependencies]
paralegal-spdg = { path = "../paralegal-spdg" }
log = "0.4"
anyhow = { workspace = true }
itertools = "0.12"
indexical = { workspace = true }
serde_json = "1"
simple_logger = "2"
lazy_static = "1"
bitvec = "1"
petgraph = { workspace = true }
colored = "1"
strum = { workspace = true }

[dev-dependencies]
paralegal-flow = { path = "../paralegal-flow", features = ["test"] }
