[package]
name = "paralegal-rustc-utils"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
serde = ["dep:serde"]
test = ["dep:textwrap"]
graphviz = ["dep:regex"]
ts-rs = ["dep:ts-rs"]
default = []

[dependencies]
anyhow = "1"
log = "0.4"
intervaltree = "0.2"
cfg-if = "1"
serde = { version = "1", features = ["derive"], optional = true }
textwrap = { version = "0.16", optional = true }
regex = { version = "1", optional = true }
ts-rs = { version = "7", optional = true }
rand = "0.8"

[dev-dependencies]
test-log = "0.2"
env_logger = { version = "0.9", default-features = false }

[build-dependencies]
paralegal-non-rustc-utils = { path = "../paralegal-non-rustc-utils" }
