[package]
name = "paralegal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
cfg-if = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(paralegal)'] }
