[package]
name = "paranoia"
version = "0.1.0"
edition = "2021"
publish = false
description = "A framework for writing policies over graphs defined in `paragraph` and extracted from Rust programs with `parable`."

[dependencies]
paragraph = { path = "../paragraph" }
anyhow = "1.0.72"
log = "0.4"
itertools = "0.11.0"
indexical = { workspace = true }
serde_json = "1"
simple_logger = "2"

[dev-dependencies]
parable = { path = "../parable", features = ["test"] }