[package]
name = "paralegal-flow"
version = "0.0.1"
edition = "2024"
publish = false
description = "Extractor for precise semantic PDGs from rust code."
# The binary is exposed under a non-default name so that `cargo-paralegal-flow`
# can act as the user-facing `paralegal-flow` shim (a symlink it self-creates
# in its own bin dir). The shim filters trivial RUSTC_WRAPPER invocations
# (`-vV`, `--print …`) before they reach this binary, which DT_NEEDEDs
# librustc_driver → libLLVM and so cannot start in environments where
# libLLVM isn't on the loader path. See crates/cli/src/main.rs.
autobins = false

[[bin]]
name = "paralegal-flow-impl"
path = "src/main.rs"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
test = ["paralegal-rustc-utils/test"]

[dependencies]
paralegal-pdg = { path = "../pdg", features = ["rustc"] }
cargo-paralegal-flow.path = "../cli"
paralegal-utils.path = "../utils"

paralegal-rustc-utils = { path = "../rustc-utils" }
clap.workspace = true

serde = { workspace = true, features = ["derive"] }
lazy_static = "1"
ordermap = "0.5.4"
trait_enum = "0.5"
pretty = "0.12"
nom = "7"
tracing.workspace = true
tracing-subscriber.workspace = true
log = "0.4"
internment = { version = "0.8.6", features = ["serde"] }
num-derive.workspace = true
num-traits.workspace = true
petgraph = { workspace = true }
humantime = "2"
strum = { workspace = true }
enum-map = "2.7"
serial_test = "2.0.0"
itertools = "0.13"
anyhow = "1.0.72"
thiserror = "2"
serde_bare = "0.5.0"
toml = "0.8"
serde_json.workspace = true
nom-supreme = "0.8.0"

dot = { git = "https://github.com/JustusAdam/dot-rust", rev = "ff2b42ceda98c639c8ea3cbfc56b83d6e06e8106" }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
paralegal-flow = { path = ".", features = ["test"] }
env_logger = "0.10"
