[package]
name = "paralegal-utils"
version = "0.0.1"
edition = "2021"
publish = false
description = "Utilities and constants for Paralegal that do not depend on rustc"

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
