[package]
name = "griswold"
description = "The top-level coordinator for Paralegal's evaluation benchmarks for the 2024 paper submission to SOSP. Named after 381 U.S. 479 'Griswold v. Connecticut' that recognized a persons's general 'right to privacy'."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paralegal-policy = { path = "../../crates/paralegal-policy" }
anyhow = "1"
sysinfo = "0.30"
humantime = "2"
indicatif = "0.16"
serde = { version = "1", features = ["derive"] }
csv = "1"
humantime-serde = "1"
toml = { version = "0.8", features = ["preserve_order"] }
strum = { version = "0.24", features = ["derive"] }

[workspace]
