[package]
name = "deletion-policy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
paralegal-policy = { path = "../../crates/paralegal-policy" }
strum = "0.26.2"
strum_macros = "0.26.2"

[workspace]