[package]
name = "inline-crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["visit", "visit-mut", "full"] }
anyhow = "1"
clap = { versoin = "4", features = ["derive"] }
proc-macro2 = "1"
prettyplease = "0.2"
lazy_static = "1"
toml = "0.8"

[workspace]