[package]
name = "async-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async-std = "1"
paralegal = { path = "../../../paralegal" }
tracing = { version = "0.1", feaures = ["attributes"] }
async-trait = "0.1"
